# DarkMaze

./: .gitignore  CMakeLists.txt  DarkMaze.sln
DarkMaze/: .gitattributes  .gitignore  Camera.h  DarkMaze.vcxproj  DarkMaze.vcxproj.filters
DarkMaze/src/: main.cpp
DarkMaze/src/labyrinth/: Labyrinth.cpp  Labyrinth.h
DarkMaze/src/lighting/: Shader.cpp  Shader.h
DarkMaze/src/shaders/: fragment_shader.fs  vertex_shader.vs
DarkMaze/x64/Debug/: DarkMaze.exe.recipe  DarkMaze.ilk  vc143.idb
DarkMaze/x64/Debug/DarkMaze.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DarkMaze.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/shaders/: vertex_shader.vs
